0.548 2025-08-12
  [Document Improvement]
    * Improve argument names of Sys#sysopen method.
  
0.547 2025-08-11
  [Document Improvement]
    * Add Sys class links to the documents.
  [Exception Message Changes]
    * Use ' instead of " for quotes.
0.546 2025-06-02
  [New Features with Incompatibe Changes]
    * Sys->S returns a correct value in Windows.
  [Requirement Changes]
    * Require SPVM 0.990059.
  [Incompatible Changes]
    * Sys::IO::Constant#S_IFSOCK method returns a value.
    * Sys#O method throw an exception in Windows.
    * Sys#o method throw an exception in Windows.
    * The each following method throws an exception in Windows.
      Sys#O method
      Sys#g method
      Sys#k method
      Sys#o method 
      Sys#u method
      
0.545 2025-05-30
  [Bug Fix]
    * Fix potential bugs related to Windows API, such as Sys#lstat, Sys#stat, Sys#fstat, Sys#l.
  [Internal Changes]
    * Rename Sys::Windows to Sys::Resource::Windows.
      Separete Sys-Windows.h to spvm_sys_windows.h and spvm_sys_windows.c.
    
0.544 2025-05-29
  [Requirement Changes]
    * Windows must support CreateSymbolicLinkW and SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE.
      #define _WIN32_WINNT 0x0A00
  [Big Fix]
    * Fix a bug that SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE is not specified in symlink method.
    * Fix bugs related to wide character in symlink method in Windows.
  [Exception Message Improvement]
    * Exception messages related to system errors contains the value of errno.
0.543 2025-05-28
  [Bug Fix]
    * Fix bugs that Sys#stat, Sys#lstat, Sys#readlink, Sys#_realpath methods fails
      in some cases that the file is opened.
    
0.542 2025-05-27
  [Bug Fix]
    * Fix bugs.
      
      Failed test 'st_dev'
      https://github.com/yuki-kimoto/SPVM-Sys/issues/92
      
      setpriority failed on this environment
      https://github.com/yuki-kimoto/SPVM-Sys/issues/93
      
0.541 2025-05-27
  [Improvement with Incompatible Changes]